--- a/css/index.css
+++ b/css/index.css
@@ -19,12 +19,12 @@ nav {
 
 nav .logo {
 
-    font-size: 33px;
+    /* font-size: 33px;
     color: white;
-    font-weight: 600;
+    font-weight: 600; */
 }
 nav .logo>img{
-    width: 17%;
+    width: 100%;
     /* height: 100%; */
     border-radius: 20px;
 }
