--- a/css/cursore_follow.css
+++ b/css/cursore_follow.css
@@ -1,8 +1,8 @@
 body {
     width: 100%;
-    height: 100vh;
-    background: #03045e;
-    overflow: hidden;
+    /* height: 100vh; */
+    /* background: #03045e; */
+    /* overflow: hidden; */
   }
   
   .circle {
