--- a/css/skils.css
+++ b/css/skils.css
@@ -13,7 +13,9 @@
     margin: auto;
 }
 
-#Techinal {}
+#Techinal {
+    width: 50%;
+}
 
 .techSkillName {
     font-size: 50px;
@@ -24,16 +26,24 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
+    /* width: 40%; */
+    justify-content: center;
 
 }
 
 .techskills>div>img {
     width: 100%;
+    margin: auto;
+    /* border: 1px solid red; */
 
 }
 
 .techskills>div {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 #tools {
@@ -43,6 +53,7 @@
 #skils img {
     /* position:static; */
 }
+
 
 @media (max-width:940px) {
     .techskills {
