--- a/css/borderAnimation.css
+++ b/css/borderAnimation.css
@@ -1,174 +1,62 @@
-*,
-::before,
-::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-/* 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #111111;
-} */
 
-.card {
+.glow-on-hover {
+  /* width: 220px;
+  height: 50px; */
+  border: none;
+  outline: none;
+  color: rgb(0, 0, 0);
+  background: rgb(255, 254, 254);
+  cursor: pointer;
   position: relative;
-  width: 300px;
-  height: 300px;
-  color: #fff;
-  background: transparent;
-  overflow: hidden;
-  border-top: 1px solid rgba(255, 49, 49, 0.5);
-  border-right: 1px solid rgba(0, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(57, 255, 20, 0.5);
-  border-left: 1px solid rgba(255, 255, 113, 0.5);
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  padding: 1em;
+  z-index: 0;
+  border-radius: 10px;
+margin: auto;
+padding-bottom: 40%;
 }
 
-/* p {
-  font-size: 0.95rem;
-  text-align: center;
-} */
-
-span {
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
   position: absolute;
-  border-radius: 100vmax;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
 }
 
-.top {
-  top: 0;
+.glow-on-hover:active {
+  color: rgb(255, 247, 247)
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgb(255, 255, 255);
   left: 0;
-  width: 0;
-  height: 5px;
-  background: linear-gradient(
-    90deg,
-    transparent 50%,
-    rgba(255, 49, 49, 0.5),
-    rgb(255, 49, 49)
-  );
-}
-
-.bottom {
-  right: 0;
-  bottom: 0;
-  height: 5px;
-  background: linear-gradient(
-    90deg,
-    rgb(57, 255, 20),
-    rgba(57, 255, 20, 0.5),
-    transparent 50%
-  );
-}
-
-.right {
   top: 0;
-  right: 0;
-  width: 5px;
-  height: 0;
-  background: linear-gradient(
-    180deg,
-    transparent 30%,
-    rgba(0, 255, 255, 0.5),
-    rgb(0, 255, 255)
-  );
+  border-radius: 10px;
 }
 
-.left {
-  left: 0;
-  bottom: 0;
-  width: 5px;
-  height: 0;
-  background: linear-gradient(
-    180deg,
-    rgb(255, 255, 113),
-    rgba(255, 255, 113, 0.5),
-    transparent 70%
-  );
-}
-
-.top {
-  animation: animateTop 3s ease-in-out infinite;
-}
-
-.bottom {
-  animation: animateBottom 3s ease-in-out infinite;
-}
-
-.right {
-  animation: animateRight 3s linear infinite;
-}
-
-.left {
-  animation: animateLeft 3s ease-in-out infinite;
-}
-
-@keyframes animateTop {
-  25% {
-    width: 100%;
-    opacity: 1;
-  }
-
-  30%,
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes animateBottom {
-  0%,
-  50% {
-    opacity: 0;
-    width: 0;
-  }
-
-  75% {
-    opacity: 1;
-    width: 100%;
-  }
-
-  76%,
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes animateRight {
-  0%,
-  25% {
-    opacity: 0;
-    height: 0;
-  }
-
-  50% {
-    opacity: 1;
-    height: 100%;
-  }
-
-  55%,
-  100% {
-    height: 100%;
-    opacity: 0;
-  }
-}
-
-@keyframes animateLeft {
-  0%,
-  75% {
-    opacity: 0;
-    bottom: 0;
-    height: 0;
-  }
-
-  100% {
-    opacity: 1;
-    height: 100%;
-  }
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
 }
