--- a/css/project.css
+++ b/css/project.css
@@ -1,9 +1,6 @@
 #project{
-    /* display: grid; */
 text-align: center;
-/* justify-content: center; */
 margin: auto;
-/* border: 1px solid red; */
 margin-top: 90px;
 width: 70%;
 
@@ -11,33 +8,24 @@ width: 70%;
 }
 .project_div{
     width: 95%;
-    /* margin: 20px; */
     margin-top: 50px;
-   /* display: flex;
-   align-items: center;
-   justify-content: center; */
    
    margin: auto;
 
 }
 .project_div>div{
     display: flex;
-    /* border: 1px solid blueviolet; */
     justify-content: center;
     margin: auto;
     margin-top: 20px;
     padding: 6px;
-    /* margin-left: 20px; */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .project_div>div>div:nth-child(1){
     width: 50%;
-    /* border: 1px solid green; */
-    /* margin-left: 20px; */
 }
 .project_div>div>div:nth-child(2){
     width: 50%;
-    /* border: 1px solid green; */
 }
 
 .project_img>img{
@@ -47,15 +35,15 @@ width: 70%;
     text-align: left;
 }
 .project_discription h3{
-    margin: 10px;
+    margin: 20px;
 }
 .project_discription h4{
     margin: 10px;
-    margin-left: 10px;
+    margin-left: 20px;
 }
 .project_discription p{
     margin: 10px;
-    margin-left: 10px;
+    margin-left: 20px;
     font-size: small;
 }
 .techstack{
@@ -63,21 +51,63 @@ width: 70%;
     margin-left: 20px;
     grid-template-columns: repeat(9,1fr);
     justify-content: space-around;
-    /* border: 1px solid red; */
     gap:4px;
 }
 .techstack>div{
-    /* width: 100%; */
     display: flex;
-    /* border: 1px solid red; */
     margin: 0px;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     
     
 }
 .techstack>div>img{
     width: 90%;
-    /* border: 1px solid red; */
 
+}
+.buttons{
+    margin-left: 20px;
+}
+.buttons>button{
+        margin: 20px 10px 10px 10px;
+        padding: 5px 10px;
+        border-radius: 5px;
+        border-color: rgb(71, 104, 22);
+         box-shadow: rgba(2, 2, 131, 0.25) 0px 13px 27px -5px, rgba(66, 12, 167, 0.3) 0px 8px 16px -8px;
+         background:rgb(255, 255, 255);
+         color: rgb(84, 128, 20);
+         
+
+}
+.buttons>button:hover{
+    cursor: pointer;
+    color: rgb(216, 113, 53);
+    border-color: rgb(216, 113, 53);
+
+}
+
+
+@media (max-width:940px){
+    .project_div>div{
+        display: block;
+    }   
+    .project_div>div>div:nth-child(1){
+        width: 99%;
+       
+    }
+    .project_div>div>div:nth-child(2){
+        width: 99%;
+    }
+    .project_discription h3{
+        margin: 10px;
+    }
+    .project_discription h4{
+        margin: 5px;
+        margin-left: 10px;
+    }
+    .project_discription p{
+        margin: 5px;
+        margin-left: 10px;
+        font-size: small;
+    }
 }
