--- a/css/skils.css
+++ b/css/skils.css
@@ -16,7 +16,7 @@
 }
 
 .techSkillName {
-    font-size: 50px;
+    font-size: 30px;
     margin-top: 20px;
 }
 
@@ -48,10 +48,33 @@
     margin-top: 30px;
 }
 
-#skils img {
-    /* position:static; */
-}
 
+
+
+#github{
+
+
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    margin-top: 70px;
+}
+#github>div{
+
+
+    width: 90%;
+    display: flex;
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+#github>div>img{
+
+
+    width: 45%;
+}
 
 @media (max-width:940px) {
     .techskills {
