--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 }
 nav {
   height: 80px;
-  width: 91%;
+  width: 100%;
   background: rgb(24, 80, 136);
   display: flex;
   align-items: center;
@@ -65,6 +65,10 @@ nav .menu-btn {
 }
 
 @media (max-width: 940px) {
+  nav{
+    width: 91%;
+    padding: 0px 0px 0px 0px;
+  }
   nav .menu-btn img {
     display: block;
     position: relative;
@@ -106,15 +110,49 @@ nav .menu-btn {
     display: block;
   }
 }
-@media (max-width: 640px) {
-  nav .menu-btn img {
-    margin-right: auto;
-    margin-left: 0px;
-  }
-  nav .menu-btn {
-    margin-left: 0px;
-    margin-right: 50px;
+@media (max-width: 650px) {
+ 
+  /* #click:checked~.menu-btn img:before{
+    content:"\f00d"
+} */
 
-    align-items: center;
+  nav ul {
+    position: fixed;
+    top: 80px;
+    left: -100%;
+    background: rgb(24, 80, 136);
+    height: 100vh;
+    width: 100%;
+    display: block;
+    text-align: center;
+    transition: all 0.5s ease;
   }
+  #click:checked ~ ul {
+    left: 0%;
+  }
+  nav ul li {
+    margin: 40px 0px;
+  }
+  nav ul li a {
+    font-size: 20px;
+    display: block;
+  }
+  nav ul li a:hover,
+  nav ul li a.active {
+    color: cyan;
+    background: none;
+  }
+  nav .menu-btn i {
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+    display: block;
+  }
+  .menu-btn{
+    margin-right: 20px;
+  }
+  .menu-btn>img{
+    margin-right: 20px;
+  }
+  
 }
