--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 }
 nav {
   height: 80px;
-  width: 100%;
+  width: 91%;
   background: rgb(24, 80, 136);
   display: flex;
   align-items: center;
@@ -15,6 +15,7 @@ nav {
   z-index: 10;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    overflow: hidden;
 }
 nav .logo > img {
   width: 15%;
@@ -69,6 +70,7 @@ nav .menu-btn {
     width: 100%;
     padding: 0px 0px 0px 50px;
     /* justify-content: center; */
+    overflow: hidden;
   }
   nav .menu-btn img {
     display: block;
@@ -92,6 +94,7 @@ nav .logo img{
     display: block;
     text-align: center;
     transition: all 0.5s ease;
+    overflow: hidden;
   }
   #click:checked ~ ul {
     left: 0%;
@@ -121,6 +124,7 @@ nav .logo img{
     width: 100%;
     padding: 0px 0px 0px 0px;
     justify-content: center;
+    overflow: hidden;
   }
   
 #click:checked ~ ul {
