for * overflow hidden

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   font-family: "Poppins", sans-serif;
+  overflow: hidden;
 }
 nav {
   height: 80px;
@@ -69,7 +70,7 @@ nav .menu-btn {
   nav{
     width: 100%;
     padding: 0px 0px 0px 50px;
-    /* justify-content: center; */
+    justify-content: space-between;
     overflow: hidden;
   }
   nav .menu-btn img {
@@ -123,7 +124,7 @@ nav .logo img{
  nav{
     width: 100%;
     padding: 0px 0px 0px 0px;
-    justify-content: center;
+    justify-content: right;
     overflow: hidden;
   }
   
