--- a/css/index.css
+++ b/css/index.css
@@ -7,12 +7,12 @@
 }
 nav {
   height: 80px;
-  width: 91%;
+  width: 100%;
   background: rgb(24, 80, 136);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 50px 0px 100px;
+  /* padding: 0px 50px 0px 100px; */
   position: fixed;
   z-index: 10;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
@@ -28,6 +28,9 @@ nav ul {
   list-style: none;
   
   
+}
+.logo{
+  margin-left: 50px;
 }
 
 nav ul li a {
@@ -67,7 +70,7 @@ nav .menu-btn {
   /* border: 1px solid red; */
   /* margin: auto; */
   height: 100%;
-  width: 20%;
+  /* width: 20%; */
   display: flex;
   align-items: center;
   
@@ -77,19 +80,20 @@ nav .menu-btn {
   display: none;
 }
 
-@media (max-width: 940px) {
+
+@media (max-width: 950px) {
   nav{
-    /* width: 100%;
-    padding: 0px 0px 0px 50px; */
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
   nav .menu-btn img {
     display: block;
     position: relative;
   }
-  /* #click:checked~.menu-btn img:before{
-    content:"\f00d"
-} */
+  nav .menu-btn{
+    width: 20%;
+    justify-content: center;
+  }
+
 nav .logo img{
   margin: 0px ;
   padding: 0px;
@@ -129,98 +133,3 @@ nav .logo img{
     display: block;
   }
 }
-
-@media (max-width: 500px){
- nav{
-    width: 100%;
-    /* padding: 0px 0px 0px 0px; */
-    justify-content: center;
-
-  }
-  
-#click:checked ~ ul {
-  left: 0%;
-}
-.logo{
-  width: 50%;
-}
-}
-@media (max-width: 450px){
-  nav{
-    justify-content: left;
-    
-  }
-  
-  
-  }
-/* 
-  
-@media (max-width: 800px){
-  nav{
-    width: 96%;
-  }
-
-  }
-  
-  @media (max-width: 750px){
-    nav{
-      width: 95%;
-    }
-   
-    
-    }
-    @media (max-width: 600px){
-      nav{
-        width: 94%;
-      }
-     
-      }
-      
-      @media (max-width: 550px){
-        nav{
-          width: 93%;
-        }
-        #click:checked ~ ul {
-          left: -7%;
-        }
-        
-        }
-        
-      @media (max-width: 500px){
-        nav{
-          width: 93%;
-        }
-        #click:checked ~ ul {
-          left: -10%;
-        }
-        
-        }
-        
-      @media (max-width: 450px){
-        nav{
-          width: 91%;
-        }
-        #click:checked ~ ul {
-          left: -10%;
-        }
-        }
-        
-        @media (max-width: 400px){
-          nav{
-            width: 86%;
-          }
-          #click:checked ~ ul {
-            left: -10%;
-          }
-          
-          }
-        
-      @media (max-width: 350px){
-        nav{
-          width: 85%;
-        }
-        #click:checked ~ ul {
-          left: -10%;
-        }
-        }
-     */
