--- a/css/project.css
+++ b/css/project.css
@@ -55,22 +55,27 @@ width: 70%;
 .techstack{
     display: grid;
     margin-left: 20px;
-    grid-template-columns: repeat(9,1fr);
-    justify-content: space-around;
-    gap:4px;
+    grid-template-columns: repeat(4,1fr);
+    /* justify-content: space-around; */
+    /* gap:1px; */
 }
-.techstack>div{
-    display: flex;
-    margin: 0px;
-    align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    
-    
+.techstack>p{
+    /* padding: 0%; */
+    width: auto;  
+    margin: auto;  
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-top: 8px;
+    padding: 2px;
+    width: 80%;
+    text-align: center;
+    color: rgb(148, 70, 70);
+    margin-bottom: 1px;
 }
-.techstack>div>img{
+/* .techstack>div>img{
     width: 90%;
 
-}
+} */
+
 .buttons{
     margin-left: 20px;
 }
